--- a/zenia-app/package.json
+++ b/zenia-app/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^4.1.0",
     "react-router-dom": "^7.9.5",
     "terser": "^5.44.1"
   },
